--- a/.github/workflows/build_and_test_eshop.yml
+++ b/.github/workflows/build_and_test_eshop.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           path: node_modules
           key: node_modules-${{ hashFiles('**/package-lock.json') }}
-          restore-keyes: node_modules-
+          restore-keys: node_modules-
       - name: Install packages with npm
         run: |
           npm ci
@@ -46,4 +46,25 @@ jobs:
         run: |
           npm rebuild node-sass --force
           npm run build -- --colors
-  
+          
+            
+  Test:
+    needs: Install
+    runs-on: ubuntu-latest
+    steps:
+      - name: Code checkout
+        uses: actions/checkout@v2.5.0
+        with:
+          token: ${{ secrets.WORKFLOW_TOKEN }}
+      - name: Setup NodeJS
+        uses: actions/setup-node@v3.5.1
+        with:
+          node-version: 10
+      - name: Cache node modules
+        uses: actions/cache@v3.0.11
+        with:
+          path: node_modules
+          key: node_modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Run tests
+        run: |
+          npm run test -- --colors
