--- a/.github/workflows/build_and_test_eshop.yml
+++ b/.github/workflows/build_and_test_eshop.yml
@@ -71,7 +71,7 @@ jobs:
           
   Deploy:
     needs: [Build, Test]
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/master' }}
     runs-on: ubuntu-latest
     steps:
       - name: Code checkout
