--- a/.github/workflows/build_and_test_eshop.yml
+++ b/.github/workflows/build_and_test_eshop.yml
@@ -109,10 +109,12 @@ jobs:
           pip3 install ansible boto boto3
 
       - name: Connect To Ansible
-          
+        env:
+          ANSIBLE_HOST_KEY_CHECKING: False  
         run: |
           echo "${{ secrets.ANSIBLE_KEY }}" > devops.pem
+          echo "${{ secrets.VAULT_PASS }}" > vault_pass
           chmod 400 devops.pem
           ssh -i "devops.pem" ec2-user@ec2-54-242-120-119.compute-1.amazonaws.com
-          ansible-playbook ec2_deploy.yml --ask-vault-pass --user ec2-user --key-file ../devops.pem
+          ansible-playbook ansible/ec2_deploy.yml --vault-password-file vault_pass --key-file devops.pem --user ec2-user
   
