--- a/.github/workflows/build_and_test_eshop.yml
+++ b/.github/workflows/build_and_test_eshop.yml
@@ -108,6 +108,11 @@ jobs:
         run: |
           pip3 install ansible boto boto3
 
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
       - name: Connect To Ansible
         env:
           ANSIBLE_HOST_KEY_CHECKING: False  
